gap fix

--- a/Components/Entete.module.css
+++ b/Components/Entete.module.css
@@ -80,9 +80,9 @@
 @media (max-width: 700px) {
   .header {
     position: absolute;
-    margin-top: -25vw;
+    margin-top: -27vw;
     margin-left: none;
-    top: 25vw;
+    top: 27vw;
   }
   .headerContent {
     padding-left: 5vw;
